tests/paczka1/fuzzy1/36025519.err
Error in line 5: S479 S427 32,4
Error in line 9: S479 S883 13,5
Error in line 4: 5rFb S883 50,1
Error in line 18: WG2BL S883 -3,4
Error in line 31: U8l S883 19,7
